# codeguide

./: .editorconfig  .gitignore  README.md  _install.sh  mise.toml  mkdocs.yml  poe_tasks.toml  pyproject.toml
.github/: publish.sh
.github/workflows/: ci-checks.yaml  ci-checks.yml  deploy-docs.yaml
codeguide/resources/configs/: dprint.json  ruff.toml
codeguide/resources/poe/: ci-checks.toml  dev-setup.toml  docs.toml  formatters.toml
codeguide/resources/toolbelt/: dprint.yaml  python-dev.yaml  python.yaml  toolbelt.yaml
config/: Makefile  ruff.toml
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: python.md
docs/stylesheets/: extra.css
src/codeguide/: __main__.py
src/codeguide/resources/poe/: dev-setup.toml
tasks/: install.sh  symlinks.sh  tests.sh
