[project]
name = "codeguide"
version = "0.0.0"
description = "A guide to coding practices and standards for hotdog-werx"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"

dependencies = []


[dependency-groups]
dev = []

[tool.hatch]
build.packages = ["codeguide"]
metadata.allow-direct-references = true

[tool]
poe.include = [".codeguide/configs/poe/dev-setup.toml"]
pyright.typeCheckingMode = "standard"
ruff.extend = ".codeguide/configs/ruff.toml"
ruff.exclude = [
  "tests/**/fixtures/**", # Exclude test fixture resources from linting
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"