[project]
name = "codeguide"
version = "0.0.0"
description = "A guide to coding practices and standards for hotdog-werx"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"

dependencies = []

[dependency-groups]
dev = [
  "tbelt >= 0.0.3",
]

[tool.hatch]
build.packages = ["codeguide"]
metadata.allow-direct-references = true

[tool.pyright]
extends = ".codeguide/configs/pyrightconfig.json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
